<resources>
    <string name="app_name">Covid-19 Status</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Useful links</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">FAQ</string>
    <string name="confirmed">CONFIRMED</string>
    <string name="active">Hospitalized</string>
    <string name="recovered">RECOVERED</string>
    <string name="deceased">DECEASED</string>
    <string name="dashed">-</string>
    <string name="title_activity_state_details">StateDetails</string>
    <string name="menu_faq">FAQ</string>
    <string name="menu_links">Useful Links</string>
    <string name="menu_about_me">About me</string>
    <string name="about_me">I am software engineer, trying to help society in this unfortunate times. I hope this app will help our society in the fight against the virus.\n\n#StayHome\n\n#StaySafe</string>
    <string name="menu_rate_us">Rate Us</string>
    <string name="new_version_message">New version available!</string>
    <string name="new_version_title">New Version</string>
    <string name="ok">OK</string>
    <string name="download">Download</string>
    <string name="alert">Alert</string>
    <string name="later">Later</string>
    <string name="blank" />
</resources>
