<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_links"
            android:icon="@drawable/ic_language_black_50dp"
            android:title="@string/menu_links" />
        <item
            android:id="@+id/nav_faq"
            android:icon="@drawable/ic_help_outline_black_50dp"
            android:title="@string/menu_faq" />
    </group>

    <item android:title="App version 1.0.0">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_assignment_ind_black_24dp"
                android:title="@string/menu_about_me" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_rate_us"
                android:icon="@drawable/ic_mood_black_50dp"
                android:title="@string/menu_rate_us" />
        </menu>
    </item>

</menu>
