<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".StateDetails"
    android:orientation="vertical"
    tools:showIn="@layout/activity_state_details">
    <TableLayout
        android:id="@+id/statusTable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*"
        tools:ignore="MissingConstraints">

        <TableRow>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="20dp">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/confirmed"
                        android:textAlignment="center"
                        android:textColor="@color/light_red" />
                    <TextView
                        android:id="@+id/txt_confirmed"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dashed"
                        android:textAlignment="center"
                        android:textColor="@color/dark_red"
                        android:textSize="40dp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="20dp">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/active"
                        android:textAlignment="center"
                        android:textColor="@color/light_blue" />
                    <TextView
                        android:id="@+id/txt_active"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dashed"
                        android:textAlignment="center"
                        android:textColor="@color/dark_blue"
                        android:textSize="40dp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </TableRow>

        <TableRow>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="20dp">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/recovered"
                        android:textAlignment="center"
                        android:textColor="@color/light_green" />
                    <TextView
                        android:id="@+id/txt_recovered"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dashed"
                        android:textAlignment="center"
                        android:textColor="@color/dark_green"
                        android:textSize="40dp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/deceased"
                        android:textAlignment="center"
                        android:textColor="@color/light_gray" />
                    <TextView
                        android:id="@+id/txt_deceased"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dashed"
                        android:textAlignment="center"
                        android:textColor="@color/dark_gray"
                        android:textSize="40dp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </TableRow>
    </TableLayout>


    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:overScrollMode="never"
        android:layout_height="wrap_content">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewStateList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:overScrollMode="never"
            android:nestedScrollingEnabled="false"
            tools:listitem="@layout/state_data_row" />
    </HorizontalScrollView>
</LinearLayout>