<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <TableLayout
        android:id="@+id/statusTable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*"
        tools:ignore="MissingConstraints">

        <TableRow>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="20dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/confirmed"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textColor="@color/light_red" />
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_gravity="center_horizontal">
                        <LinearLayout
                            android:layout_centerHorizontal="true"
                            android:layout_width="wrap_content"
                            android:orientation="horizontal"
                            android:layout_height="wrap_content">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/txt_confirmed_increase"
                                android:textColor="@color/light_red"
                                android:text="@string/dashed"/>
                        </LinearLayout>
                    </RelativeLayout>
                    <TextView
                        android:id="@+id/txt_confirmed"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dashed"
                        android:textAlignment="center"
                        android:textColor="@color/dark_red"
                        android:textSize="40sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="20dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/active"
                        android:textAllCaps="true"
                        android:textAlignment="center"
                        android:textColor="@color/light_blue" />
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_gravity="center_horizontal">
                        <LinearLayout
                            android:layout_centerHorizontal="true"
                            android:layout_width="wrap_content"
                            android:orientation="horizontal"
                            android:layout_height="wrap_content">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/txt_active_increase"
                                android:textColor="@color/light_blue"
                                android:text="@string/dashed"/>
                        </LinearLayout>
                    </RelativeLayout>
                    <TextView
                        android:id="@+id/txt_active"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dashed"
                        android:textAlignment="center"
                        android:textColor="@color/dark_blue"
                        android:textSize="40sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </TableRow>

        <TableRow>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="20dp">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/recovered"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textColor="@color/light_green" />
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_gravity="center_horizontal">
                        <LinearLayout
                            android:layout_centerHorizontal="true"
                            android:layout_width="wrap_content"
                            android:orientation="horizontal"
                            android:layout_height="wrap_content">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/txt_recovered_increase"
                                android:textColor="@color/light_green"
                                android:text="@string/dashed"/>
                        </LinearLayout>
                    </RelativeLayout>
                    <TextView
                        android:id="@+id/txt_recovered"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dashed"
                        android:textAlignment="center"
                        android:textColor="@color/dark_green"
                        android:textSize="40sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/deceased"
                        android:textAllCaps="true"
                        android:textAlignment="center"
                        android:textColor="@color/light_gray" />
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_gravity="center_horizontal">
                        <LinearLayout
                            android:layout_centerHorizontal="true"
                            android:layout_width="wrap_content"
                            android:orientation="horizontal"
                            android:layout_height="wrap_content">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/txt_deceased_increase"
                                android:textColor="@color/light_gray"
                                android:text="@string/dashed"/>
                        </LinearLayout>
                    </RelativeLayout>
                    <TextView
                        android:id="@+id/txt_deceased"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dashed"
                        android:textAlignment="center"
                        android:textColor="@color/dark_gray"
                        android:textSize="40sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </TableRow>
    </TableLayout>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:overScrollMode="never"
        android:layout_height="wrap_content">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewStateList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:overScrollMode="never"
            android:nestedScrollingEnabled="false"
            tools:listitem="@layout/state_data_row" />
    </HorizontalScrollView>
</LinearLayout>